Fix Mobile Horizontal Scrolling

--- a/samari/static/css/app.scss
+++ b/samari/static/css/app.scss
@@ -77,6 +77,7 @@ p {
 
 body {
   overflow-x: hidden;
+  width: 100%;
 }
 
 section {
